--- a/styles/global.css
+++ b/styles/global.css
@@ -21,7 +21,6 @@
   --text-base: 1rem;
   --text-lg: 2.5rem;
   --text-xl: 4rem;
-
 }
 
 html, button {
@@ -40,4 +39,9 @@ h1 {
 h2 {
   font-size: var(--text-lg);
   line-height: 1.2;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
