--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,11 @@ html, button {
   font: 500 1rem/1.5 var(--ff-base);
 }
 
+html {
+  /* remover depois */
+  /* zoom: .5; */
+}
+
 h1, h2 {
   font-family: "Syne", sans-serif;
 }
